[package]
name = "blackjack-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
crossterm = "0.28.1"
rand = "0.9"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = "0.6"
uuid = { version = "1", features = ["v4"] }
